Fix overflowing tables in mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -93,3 +93,7 @@ body {
         display: block;
     }
 }
+
+div.horizontal-scroll {
+    overflow-x: auto;
+}
